Refactor: Clean up code and add documentation
This commit includes several code cleanup and documentation improvements:

- **Code Style & Nullability:**
    - Added `Objects.requireNonNull` and assertions for potentially null values in various classes.
    - Updated method signatures with `@NonNull` where appropriate.
    - Simplified bitmap pixel iteration in `PlantIdentifier`.
- **Variable Scope:**
    - Localized variables within methods where they are solely used (e.g., `Context` in test setups, UI components in fragments).
- **AR & ML:**
    - Replaced `fragment` tag with `FragmentContainerView` in `activity_ar_entry.xml`.
    - Removed unused `ArModule` Dagger providers.
- **Accessibility:**
    - Marked decorative icons as `importantForAccessibility="no"` in `measurement_card.xml`.
- **Android Manifest:**
    - Restricted `READ_EXTERNAL_STORAGE` permission to `maxSdkVersion="32"`.
- **Repository Simplification:**
    - Removed unused `appExecutors` field from `PlantRepository` and `DiaryRepository` as only the single executor was used.
- **Documentation:**
    - Added `calibration_guide.md` and `sync_troubleshooting.md`.
    - Corrected a numbering issue in `firebase_setup.md`.
- **Minor Fixes & Cleanups:**
    - Removed unused UI element fields in fragments (`AddPlantFragment`, `PlantDetailFragment`, `PlantListFragment`, `HomeFragment`, `PlantTaskFragment`, `ArEntryActivity`).
    - Removed commented-out code in `Plant.java`, `DiaryModule.java`, `GrowScheduleModule.java`.
    - Corrected return type of `AssetModelProvider.loadModelFile`.
    - `DiaryEntryDialog.show` now returns `void`.